<resources>
  <string name="app_name">PoketDex</string>
  <!--  Error handling -->
  <string name="error_on_request">Some kind of error occurred. Please try again!</string>

  <string name="shiny">Shiny</string>
  <string name="stats">Stats</string>
  <string name="type">Type</string>
  <string name="hp">hp</string>
  <string name="attack">attack</string>
  <string name="defense">defense</string>
  <string name="special_attack">Special Attack</string>
  <string name="special_defense">Special Defense</string>
  <string name="speed">Speed</string>
  <string name="moves">Moves</string>
  <string name="abilities">abilities</string>
  <string name="weight">weight</string>
  <string name="kilograms">Kg</string>
  <string name="meters">m</string>
  <string name="height">height</string>
  <string name="base_experience">base experience</string>
  <string name="slot_n">Slot nº</string>
  <string name="hidden_ability">Hidden Ability</string>
  <string name="description">description</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="no">No. </string>
  <string name="general_info">General Info</string>
  <string name="effect">Effect</string>
  <string name="short_effect">Short Effect</string>
  <string name="power">Power</string>
  <string name="double_dmg_to">Double\nDamage</string>
  <string name="half_dmg_to">Half\nDamage</string>
  <string name="no_dmg_to">No\nDamage</string>
  <string name="picked_type">picked type</string>
</resources>
