<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/frameLayout3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.details_pager_fragments.StatsInfoFragment">


  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/invisible_divider_4dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:showDividers="middle">

      <LinearLayout
          android:id="@+id/linearLayout6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <TextView

            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkish_gray"
            android:gravity="center"
            android:text="@string/hp"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textViewStatsHp"
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white" />

        <TextView

            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkish_gray"
            android:gravity="center"
            android:text="@string/attack"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textViewStatsAttack"
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/linearLayout7"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          tools:layout_editor_absoluteY="45dp">

        <TextView
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkish_gray"
            android:gravity="center"
            android:text="@string/defense"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textViewStatsDefense"
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="" />

        <TextView
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkish_gray"
            android:gravity="center"
            android:text="@string/speed"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textViewStatsSpeed"
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/linearLayout12"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          tools:layout_editor_absoluteY="68dp">

        <TextView
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkish_gray"
            android:gravity="center"
            android:text="@string/weight"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textViewStatsWeight"
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="" />

        <TextView
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkish_gray"
            android:gravity="center"
            android:text="@string/height"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textViewStatsHeight"
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/linearLayout9"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          tools:layout_editor_absoluteY="90dp">

        <TextView
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkish_gray"
            android:gravity="center"
            android:text="@string/special_attack"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textViewStatsSpecialAttack"
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="" />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/linearLayout10"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkish_gray"
            android:gravity="center"
            android:text="@string/special_defense"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textViewStatsSpecialDefense"
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="" />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkish_gray"
            android:gravity="center"
            android:text="@string/base_experience"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/textViewStatsBaseExperience"
            style="@style/details_small_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>